[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/GunBorder.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/SHG_icon.png" type="Texture" id=2]
[ext_resource path="res://ReloadBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/UI/Fonts/PaperJohnnyEins-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://GunStatDisplay.gd" type="Script" id=5]
[ext_resource path="res://Sprites/UI/UZI_fill.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/UZI_fill_low.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/warning_sign.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 4 )

[node name="ShotgunStatDisplay" type="Node2D"]
script = ExtResource( 5 )

[node name="GunBorder" type="Sprite" parent="."]
visible = false
position = Vector2( 138.25, 153 )
scale = Vector2( 0.620219, 0.557143 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 119 )
texture = ExtResource( 2 )

[node name="AmmoText" type="Label" parent="."]
margin_left = 81.0
margin_top = 72.0
margin_right = 207.0
margin_bottom = 102.0
custom_colors/font_color_shadow = Color( 0.317647, 0.286275, 0.0823529, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 1 )
text = "Reloading..."
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReloadBar" parent="." instance=ExtResource( 3 )]
margin_left = 214.0
margin_top = 158.0
margin_right = 336.0
margin_bottom = 184.0
medium_health = 99
textures = [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ]

[node name="WarningSign" type="Sprite" parent="."]
position = Vector2( 188, 136 )
texture = ExtResource( 8 )
